# pokemmo-companion

./: .gitignore  CLAUDE.md  README.md  build-windows.md  package-lock.json  package.json
docs/plans/: 2026-04-01-v2-implementation.md
docs/specs/: 2026-04-01-companion-implementation-plan.md  2026-04-01-companion-overlay-design.md  2026-04-01-v2-companion-design.md
scripts/: convert-data.js  enrich-catches 2.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  profiles.rs
src/data/: battles.json  hidden-items.json  types 2.json  unova.json
src/js/: app.js  catches.js  navigation.js  profiles.js  settings 2.js  settings.js  steps.js  typechart.js  ui.js
src/styles/: app.css  theme.css
tests/js/: catches.test 2.js  settings.test.js  steps.test.js  typechart.test 2.js  ui.test.js
